[package]
name = "nmdbus"
description = "Get every info about your linux system."
version = "1.10.14"
authors = ["Sören Meier <soeren@s-me.ch>"]
repository = "https://github.com/soerenmeier/nmdbus"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["network-manager", "dbus"]
categories = ["os::unix-apis", "api-bindings"]

[dependencies]
dbus = "0.9"